[package]
name = "spybot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
colored = "3.0.0"
reqwest = {version="0.12.12", features=["json", "blocking"]}
serde = {version="1.0.218", features=["derive"]}
serde_json = "1.0.139"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
